--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page</title>
+    <title>Valuta Converter</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,6 +21,11 @@
                     <option value="EUR">Euro (€)</option>
                     <option value="CAD">Canadian Dollar (C$)</option>
                     <option value="INR">Indian Rupee (₹)</option>
+                    <option value="JPY">Japanese Yen (¥)</option>
+                    <option value="GBP">Pound sterling (£)</option>
+                    <option value="AUD">Australian Dollar (A$)</option>
+                    <option value="CHF">Swiss Franc (CHF)</option>
+                    <option value="COP">Colombian Peso (COL$)</option>
                 </select>
             </div>
             <div>
@@ -30,6 +35,11 @@
                     <option value="EUR">Euro (€)</option>
                     <option value="CAD">Canadian Dollar (C$)</option>
                     <option value="INR">Indian Rupee (₹)</option>
+                    <option value="JPY">Japanese Yen (¥)</option>
+                    <option value="GBP">Pound sterling (£)</option>
+                    <option value="AUD">Australian Dollar (A$)</option>
+                    <option value="CHF">Swiss Franc (CHF)</option>
+                    <option value="COP">Colombian Peso (COL$)</option>
                 </select>
             </div>
         </div>
